--- a/TareasMVC/appsettings.Development.json
+++ b/TareasMVC/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MARCELINO-CRM;Database=Proyecto3MVCTareas;User Id=sa;Password=M23120001m;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
